--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,28 +1,18 @@
 {
   "include": [
-    "."
+    "**/*.py"
   ],
   "exclude": [
     "**/node_modules",
     "**/__pycache__",
-    "mcp_results"
+    "venv",
+    ".venv",
+    "env",
+    ".env"
   ],
-  "ignore": [
-    "**/node_modules"
-  ],
-  "defineConstant": {
-    "DEBUG": true
-  },
   "reportMissingImports": true,
   "reportMissingTypeStubs": false,
   "pythonVersion": "3.9",
   "typeCheckingMode": "basic",
-  "useLibraryCodeForTypes": true,
-  "reportGeneralTypeIssues": "warning",
-  "reportOptionalSubscript": "warning",
-  "reportOptionalMemberAccess": "warning",
-  "reportOptionalCall": "warning",
-  "reportOptionalIterable": "warning",
-  "reportOptionalContextManager": "warning",
-  "reportOptionalOperand": "warning"
+  "useLibraryCodeForTypes": true
 }
